# lbm

./: CMakeLists.txt  README.md
src/: LBM.cpp  LBM.h  LBMGPU.cu  LBMGPU.cuh  application.cpp  application.cu  application.cuh  application.h  color.cpp  color.h  grid.h  main.cpp  simulation.cpp  simulation.h  staggeredGrid.h  utils.cpp  utils.h  vec2.cpp  vec2.h
src/shaders/: twoTriangles.fs  twoTriangles.vs
